# SRend

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
apps/test/: CMakeLists.txt  main.cpp
libs/: CMakeLists.txt
modules/: CMakeLists.txt
modules/utils/: CMakeLists.txt
modules/utils/include/utils/: allocator.hpp  debug.hpp  signals.hpp  utils.hpp
modules/utils/source/Allocator/: Allocator.cpp  Allocator.hpp  AllocatorImpl.hpp  AllocatorPolitics.cpp  AllocatorPolitics.hpp
modules/utils/source/AnyPtr/: AnyPtr.cpp  AnyPtr.hpp
modules/utils/source/ImplPtr/: ImplPtr.hpp
modules/utils/source/Version/: Version.cpp  Version.hpp
modules/utils/source/debug/: Messenger.cpp  Messenger.hpp  MessengerCallbacks.cpp  MessengerCallbacks.hpp  Tester.cpp  Tester.hpp
modules/utils/source/flagsUtils/: BitFlags.hpp  flagsUtils.hpp
modules/utils/source/signals/: signals.hpp
modules/utils/source/stringUtils/: stringUtils.cpp  stringUtils.hpp
modules/utils/source/utilTypes/: utilTypes.hpp
modules/vulkan/: CMakeLists.txt
modules/vulkan/include/vulkan/: core.hpp  presentation.hpp
modules/vulkan/source/: utils.cpp  utils.hpp
modules/vulkan/source/core/Application/: Application.cpp  Application.hpp  ApplicationImpl.cpp  ApplicationImpl.hpp
modules/vulkan/source/core/BufferManager/: BufferManager.cpp  BufferManager.hpp  BufferManagerImpl.cpp  BufferManagerImpl.hpp  BufferT.hpp
modules/vulkan/source/core/CommandBuffer/: CommandBuffer.cpp  CommandBuffer.hpp  CommandBufferImpl.cpp  CommandBufferImpl.hpp
modules/vulkan/source/core/Device/: Device.cpp  Device.hpp  DeviceImpl.cpp  DeviceImpl.hpp
modules/vulkan/source/core/PhysicalDevice/: PhysicalDevice.cpp  PhysicalDevice.hpp  PhysicalDeviceImpl.cpp  PhysicalDeviceImpl.hpp
modules/vulkan/source/core/framebuffer/: framebuffer.cpp  framebuffer.hpp  framebuffer_t.cpp  framebuffer_t.hpp
modules/vulkan/source/core/image/: image.cpp  image.hpp  image_t.cpp  image_t.hpp
modules/vulkan/source/core/image_view/: image_view.cpp  image_view.hpp  image_view_t.cpp  image_view_t.hpp
modules/vulkan/source/core/pipeline/: pipeline.cpp  pipeline.hpp  pipeline_t.cpp  pipeline_t.hpp
modules/vulkan/source/core/render_description/: render_description.cpp  render_description.hpp  render_description_t.cpp  render_description_t.hpp
modules/vulkan/source/core/sampler/: sampler.cpp  sampler.hpp  sampler_t.cpp  sampler_t.hpp
modules/vulkan/source/core/shader/: shader.cpp  shader.hpp  shader_t.cpp  shader_t.hpp
modules/vulkan/source/core/vertex_input_format/: vertex_input_format.cpp  vertex_input_format.hpp  vertex_input_format_t.cpp  vertex_input_format_t.hpp
modules/vulkan/source/presentation/surface/: surface.cpp  surface.hpp  surface_t.hpp
modules/vulkan/source/presentation/swapchain/: swapchain.cpp  swapchain.hpp  swapchain_t.cpp  swapchain_t.hpp
modules/wsystem/: CMakeLists.txt
modules/wsystem/include/wsystem/: vulkan.hpp  wsystem.hpp
modules/wsystem/source/Manager/: BaseManager.hpp  Manager.cpp  Manager.hpp
modules/wsystem/source/Window/: BaseWindow.hpp  Window.cpp  Window.hpp  WindowImpl.cpp  WindowImpl.hpp
modules/wsystem/source/sdl/: SDLManager.cpp  SdlManager.hpp  SdlVulkan.cpp  SdlVulkan.hpp  SdlWindow.cpp  SdlWindow.hpp
modules/wsystem/source/vulkan/: BaseVulkanExt.hpp  vulkan.cpp  vulkan.hpp
